--- a/about.html
+++ b/about.html
@@ -185,17 +185,15 @@ RESUME</p>
             <h1>SKILLS</h1>
             <hr>
 
-            <h6>JAVA: 80%<br>
+            <h6>DBMS: 80%<br>
 
-JavaScript: 70%<br>
+Operating System : 70%<br>
 
-Node.Js: 60%<br>
+Computer Networking: 60%<br>
 
-MongoDB: 60%<br>
+Software Engineering: 70%<br>
 
-git: 70%<br>
-
-HTML & CSS: 80%<br>
+HTML & CSS: 70%<br>
 
 C basics: 70%<br>
 
